--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
-  background: #1a1a2e;
+  background: #ECECBB;
   color: white;
 }
 
@@ -14,8 +14,10 @@ body {
   width: 100vw;
   height: 100vh;
   display: flex;
+  flex-direction: column;
   align-items: center;
   padding: 0 8%;
+  border: red solid 1px;
 }
 
 .content {
