--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ body {
 }
 
 .container {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -22,6 +22,7 @@ body {
 
 .content {
   flex: 1;
+  width: 100%;
 }
 
 .logo {
