--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,1 +1,11 @@
-
+.Navbar{
+    width: 100%;
+    height: 100%;
+    min-height: 80px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    background-color: #ffffff;
+}
